--- a/ablate-net-app/package.json
+++ b/ablate-net-app/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "child_process": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
